--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,10 +1,24 @@
 .header {
-	position: fixed;
-	top: 0;
+	position: absolute;
 	left: 0;
+	top: 0;
 	width: 100%;
-	@media(min-width : $mobile){
-		border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+	min-height: rem(50);
+	&._scroll .header__wrapper {
+		@media(min-width : $mobile){
+			border: 0;
+			background-color: rgba(145, 145, 148, 0.796);
+		}
+	}
+	&__wrapper {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		z-index: 5;
+		@media(min-width : $mobile){
+			border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+		}
 	}
 	&__container {
 		display: flex;
@@ -219,7 +233,7 @@
 			left: 0;
 			width: 100%;
 			height: 80px;
-			background-color: rgb(148, 145, 145);
+			background-color: rgba(145, 145, 148, 1);
 			z-index: 2;
 			@media(max-width : $mobileSmall){
 				height: rem(60);
