--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,7 +41,6 @@ $blueColor: #0065F2;
 @import "null";
 body {
 	color: $mainColor;
-	background-color: rgb(148, 145, 145);
 	&._lock {
 		overflow: hidden;
 	}
@@ -82,7 +81,206 @@ body {
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
 	flex: 1 1 auto;
+	&__main {
+	}
 }
 //===================================================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
+
+
+
+//<MAIN-PAGE>====================================================================================================
+
+
+.main-page {
+	position: relative;
+	overflow: hidden;
+	&__container {
+		position: relative;
+		z-index: 2;
+		padding-top: rem(305);
+		@media(max-width : $pc){
+			padding-top: rem(200);
+		}
+		@media(max-width : $mobileSmall){
+			padding-top: rem(130);
+		}
+	}
+
+	&__title {
+		margin-bottom: math.div(60, 48) * 1em;
+		span {
+			white-space: nowrap;
+		}
+		@media(min-width : $mobile){
+			max-width: prc(620, 1300);
+		}
+		@media(max-width : $mobile){
+			font-size: rem(36);
+		}
+		@media(max-width : $tablet){
+			font-size: rem(28);
+		}
+	}
+
+	&__video {
+	}
+
+	&__information {
+	}
+
+	&__background {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		@media(max-width : em(1175)){
+			& img {
+				object-position: left;
+			}
+		}
+		@media(max-width : em(860)){
+			opacity: 0.5;
+			& img {
+				object-position: -350px 0px;
+			}
+		}
+		@media(max-width : $mobile){
+			& img {
+				object-position: -300px 0px;
+			}
+		}
+		@media(max-width : em(625)){
+			& img {
+				object-position: -400px 0px;
+			}
+		}
+	}
+
+	&__gradient {
+		&::before {
+			content:'';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			display: block;
+			background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+		}
+	}
+}
+
+
+.main-video {
+	display: flex;
+	align-items: center;
+	column-gap: rem(30);
+	margin-bottom: rem(200);
+	@media(max-width : $pc){
+		margin-bottom: rem(150);
+	}
+	@media(max-width : $mobile){
+		margin-bottom: rem(80);
+	}
+	&__play {
+		border: 1px solid #FFFFFF;
+		flex: 0 0 rem(80);
+		height: rem(80);
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		cursor: pointer;
+		@media(max-width : $mobileSmall){
+			flex: 0 0 rem(60);
+			height: rem(60);
+		}
+	}
+	&__button {
+		height: calc(100% - rem(14));
+		width: calc(100% - rem(14));
+		border-radius: 50%;
+		background-color: #8D86C9;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&__arrow {
+		width: 0;
+		height: 0;
+		border-left: 20px solid #fff;
+		border-top: 16px solid transparent;
+		border-bottom: 16px solid transparent;
+		@media(max-width : $mobileSmall){
+			border-left: 16px solid #fff;
+			border-top: 10px solid transparent;
+			border-bottom: 10px solid transparent;
+		}
+	}
+
+	&__text {
+		flex: 0 0 rem(160);
+		font-size: rem(18);
+		line-height: 140%;
+		color: #FFFFFF;
+		@media(max-width : $mobileSmall){
+			font-size: rem(16);
+		}
+	}
+}
+.main-information {
+	display: grid;
+	gap: rem(30) rem(12);
+	grid-template-columns: repeat(auto-fill, minmax(18.125rem, 1fr));
+	@media(max-width : $mobile){
+		row-gap: rem(15);
+	}
+	&__item {
+		background-color: #8D86C9;
+	}
+
+	&__container {
+		padding: rem(35);
+		@media(max-width : $mobileSmall){
+			padding: rem(20);
+		}
+	}
+
+	&__category {
+		font-size: rem(18);
+		line-height: 140%;
+		color: #FFFFFF;
+		margin-bottom: math.div(17, 18) * 1em;
+		@media(max-width : $mobileSmall){
+			font-size: rem(16);
+		}
+	}
+
+	&__name {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		column-gap: rem(5);
+	}
+
+	&__text {
+		font-weight: bold;
+		font-size: rem(24);
+		line-height: 140%;
+		color: #FFFFFF;
+		@media(max-width : $mobileSmall){
+			font-size: rem(20);
+		}
+	}
+
+	&__link {
+		color: #fff;
+	}
+}
+
+
+//<MAIN-PAGE>====================================================================================================
