--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -83,6 +83,8 @@ body {
 	flex: 1 1 auto;
 	&__main {
 	}
+	&__corts {
+	}
 }
 //===================================================================================================================================
 
@@ -96,6 +98,13 @@ body {
 .main-page {
 	position: relative;
 	overflow: hidden;
+	margin-bottom: rem(175);
+	@media(max-width : $tablet){
+		margin-bottom: rem(100);
+	}
+	@media(max-width : $mobileSmall){
+		margin-bottom: rem(50);
+	}
 	&__container {
 		position: relative;
 		z-index: 2;
@@ -156,19 +165,6 @@ body {
 			& img {
 				object-position: -400px 0px;
 			}
-		}
-	}
-
-	&__gradient {
-		&::before {
-			content:'';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			display: block;
-			background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 		}
 	}
 }
@@ -283,4 +279,68 @@ body {
 }
 
 
-//<MAIN-PAGE>====================================================================================================
+//</MAIN-PAGE>====================================================================================================
+
+
+
+//<CORTS-BLOCK>====================================================================================================
+
+.corts-block {
+	margin-bottom: rem(175);
+	@media(max-width : $tablet){
+		margin-bottom: rem(100);
+	}
+	@media(max-width : $mobileSmall){
+		margin-bottom: rem(50);
+	}
+	&__container {
+	}
+
+	&__wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		margin: 0 rem(20);
+		gap: rem(40) rem(20);
+		@media(max-width : em(842)){
+			justify-content: center;
+		}
+		@media(max-width : $mobile){
+			gap: rem(20);
+		}
+	}
+
+	&__cort {
+		// width: prc(376, 1260);
+		width: rem(376);
+		position: relative;
+	}
+
+	&__image {
+		padding-bottom: prc(450, 376);
+	}
+
+	&__label {
+		position: absolute;
+		bottom: rem(40);
+		left: 0;
+		width: 100%;
+		z-index: 2;
+		text-align: center;
+		font-weight: 700;
+		font-size: rem(27);
+		line-height: 140%;
+		color: #FFFFFF;
+		@media(max-width : $mobile){
+			bottom: rem(25);
+			font-size: rem(22);
+		}
+	}
+
+	&__text {
+		max-width: prc(320, 376);
+		margin: 0 auto;
+	}
+}
+
+//</CORTS-BLO>====================================================================================================
