--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -12,6 +12,19 @@
 	content: "₽";
 }
 
+._gradient {
+	&::before {
+		content:'';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: block;
+		background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+	}
+}
+
 ._title-h1 {
 	font-weight: 700;
 	font-size: rem(48);
