--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,6 +85,8 @@ body {
 	}
 	&__corts {
 	}
+	&__club {
+	}
 }
 //===================================================================================================================================
 
@@ -344,3 +346,135 @@ body {
 }
 
 //</CORTS-BLO>====================================================================================================
+
+
+//<CLUB-BLOCK>====================================================================================================
+
+
+.club-block {
+	margin-bottom: rem(150);
+	@media(max-width : $tablet){
+		margin-bottom: rem(65);
+	}
+	&__container {
+	}
+
+	&__wrapper {
+		margin: 0 prc(110, 1300);
+		position: relative;
+	}
+
+	&__picture {
+		display: block;
+		@media(min-width : em(865)){
+			position: absolute;
+			left: 0;
+			top: 50%;
+			width: prc(526, 1076);
+			transform: translate(0, -50%);
+		}
+	}
+
+	&__image {
+		width: 100%;
+		padding-bottom: prc(514, 526);
+		@media(max-width : em(865)){
+			max-width: rem(526);
+			margin: 0 auto;
+		}
+	}
+
+	&__history {
+	}
+}
+
+.club-history {
+	max-width: prc(636, 1076);
+	background-color: #F7ECE1;
+	margin-left: auto;
+	@media(max-width : em(865)){
+		margin: 0px 0px rem(30) 0px;
+		max-width: 100%;
+	}
+	@media(max-width : $mobileSmall){
+		margin: 0px 0px rem(20) 0px;
+	}
+	&__container {
+		max-width: prc(430, 636);
+		margin: 0 prc(60, 636) 0 auto;
+		padding: rem(70) 0;
+		@media(max-width : $pc){
+			padding: rem(40) 0;
+		}
+		@media(max-width : $tablet){
+			padding: rem(20) 0;
+		}
+		@media(max-width : em(865)){
+			max-width: 100%;
+			margin: 0 rem(30);
+		}
+		@media(max-width : $mobileSmall){
+			margin: 0 rem(15);
+		}
+	}
+
+	&__title {
+		margin-bottom: math.div(35, 36) * 1em;
+		@media(max-width : $tablet){
+			font-size: rem(28);
+			margin-bottom: rem(20);
+		}
+	}
+
+	&__text {
+		font-size: rem(14);
+		line-height: 140%;
+		color: #333;
+		margin-bottom: math.div(35, 14) * 1em;
+		@media(max-width : $tablet){
+			margin-bottom: rem(20);
+		}
+		@media(max-width : $mobileSmall){
+			font-size: rem(12);
+		}
+		p:not(:last-child) {
+			margin-bottom: 1em;
+		}
+	}
+
+	&__subtitle {
+		margin-bottom: math.div(25, 21) * 1em;
+		@media(max-width : $tablet){
+			font-size: rem(20);
+			margin-bottom: rem(15);
+		}
+	}
+
+	&__list {
+	}
+
+	&__item {
+		font-size: rem(14);
+		line-height: 140%;
+		color: #333;
+		margin-bottom: math.div(20, 14) * 1em;
+		padding-left: rem(30);
+		position: relative;
+		@media(max-width : $mobileSmall){
+			font-size: rem(12);
+			padding-left: rem(20);
+		}
+		&::before {
+			content:'';
+			position: absolute;
+			top: 5px;
+			left: 0;
+			width: rem(8);
+			height: rem(8);
+			background-color: #8D86C9;
+		}
+	}
+}
+
+
+//</CLUB-BLOCK>====================================================================================================
