--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -32,6 +32,21 @@
 	color: #FFFFFF;
 }
 
+._title-h2 {
+	font-weight: 700;
+	font-size: rem(36);
+	line-height: 140%;
+	color: #333333;
+}
+
+._title-h3 {
+	font-weight: 600;
+	font-size: rem(21);
+	line-height: 140%;
+	color: #333333;
+}
+
+
 //====================================================================================================
 %noselect {
 	-webkit-touch-callout: none;
