--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -89,6 +89,8 @@ body {
 	}
 	&__coaches {
 	}
+	&__services {
+	}
 }
 //===================================================================================================================================
 
@@ -493,57 +495,6 @@ body {
 	}
 	&__container {
 	}
-
-	&__head {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: rem(75);
-		@media(max-width : $mobile){
-			margin-bottom: rem(40);
-		}
-		@media(max-width : em(600)){
-			flex-direction: column;
-			align-items: flex-start;
-		}
-	}
-
-	&__title {
-		@media(max-width : $mobileSmall){
-			font-size: rem(28);
-		}
-		@media(max-width : em(600)){
-			margin-bottom: rem(20);
-		}
-	}
-
-	&__arrows {
-		display: flex;
-		align-items: center;
-		gap: rem(15);
-	}
-
-	&__arrow {
-		width: rem(45);
-		height: rem(45);
-		background-color: #8D86C9;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		color: #fff;
-		cursor: pointer;
-		&_prev {
-			&::before {
-				transform: rotate(180deg);
-			}
-		}
-
-		&_next {
-		}
-	}
-
-	&__slider {
-	}
 }
 
 .coaches-slider {
@@ -593,3 +544,153 @@ body {
 }
 
 //</COACHES-PAGE>====================================================================================================
+
+
+
+
+//<SERVICES-PAGE>====================================================================================================
+
+.services-page {
+	margin-bottom: rem(150);
+	@media(max-width : $mobile){
+		margin-bottom: rem(80);
+	}
+	&__container {
+		display: flex;
+		justify-content: space-between;
+		gap: rem(50);
+		@media(max-width : $pc){
+			flex-direction: column;
+		}
+	}
+
+	&__prices {
+	}
+
+	&__body {
+	}
+}
+
+.prices-aside {
+	flex: 0 0 prc(526, 1300);
+	@media(max-width : $pc){
+		order: 2;
+	}
+	&__title {
+		margin-bottom: rem(75);
+		@media(max-width : $tablet){
+			font-size: rem(28);
+			margin-bottom: rem(30);
+		}
+	}
+
+	&__column {
+		display: flex;
+		flex-direction: column;
+		row-gap: rem(30);
+	}
+
+	&__row {
+		background-color: #8D86C9;
+		padding: rem(15) rem(15) rem(15) rem(30);
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		max-width: rem(600);
+		@media(max-width : $mobileSmall){
+			padding: rem(15);
+		}
+	}
+
+	&__name {
+		color: #fff;
+		@media(max-width : $mobileSmall){
+			font-size: rem(16);
+		}
+	}
+
+	&__arrow {
+		transform: rotate(180deg);
+		color: #fff;
+		font-weight: normal;
+	}
+}
+
+.services-body {
+	flex: 0 0 prc(636, 1300);
+	min-width: 0;
+	@media(max-width : $pc){
+		order: 1;
+	}
+	&__head {
+	}
+
+	&__slider {
+	}
+}
+
+.services-slider {
+	&__wrapper {
+		
+	}
+
+	&__item {
+		width: rem(636);
+		@media(min-width : em(1220)){
+			height: rem(330);
+		}
+		@media(max-width : em(1220)){
+			display: flex;
+			justify-content: center;
+		}
+	}
+
+	&__picture {
+		border: 1px solid #F7ECE1;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		@media(max-width : $pc){
+			max-width: rem(636);
+		}
+		@media(max-width : em(1220)){
+			padding: rem(10) 0;
+		}
+		&_wrapper {
+			position: relative;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: prc(586, 636);
+		}
+	}
+
+	&__image {
+		width: 100%;
+		padding-bottom: prc(270, 636);
+	}
+
+	&__label {
+		position: absolute;
+		left: rem(40);
+		bottom: rem(30);
+		color: #fff;
+		font-weight: 700;
+		font-size: rem(27);
+		line-height: 140%;
+		@media(max-width : $mobile){
+			font-size: rem(18);
+			left: rem(20);
+			bottom: rem(15);
+		}
+		@media(max-width : $mobileSmall){
+			font-size: rem(16);
+			left: rem(15);
+			bottom: rem(10);
+		}
+	}
+}
+
+//</SERVICES-PAGE>====================================================================================================
