--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -40,10 +40,60 @@
 }
 
 ._title-h3 {
-	font-weight: 600;
+	font-weight: 500;
 	font-size: rem(21);
 	line-height: 140%;
 	color: #333333;
+}
+
+.slider-head {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: rem(75);
+	@media(max-width : $mobile){
+		margin-bottom: rem(40);
+	}
+	@media(max-width : em(600)){
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	&__title {
+		@media(max-width : $mobileSmall){
+			font-size: rem(28);
+		}
+		@media(max-width : em(600)){
+			margin-bottom: rem(20);
+		}
+	}
+	&__arrows {
+		display: flex;
+		align-items: center;
+		gap: rem(15);
+	}
+	&__arrow {
+		width: rem(45);
+		height: rem(45);
+		background-color: #8D86C9;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color: #fff;
+		cursor: pointer;
+		@media(max-width : $mobileSmall){
+			width: rem(35);
+			height: rem(35);
+			font-size: rem(12);
+		}
+		&_prev {
+			&::before {
+				transform: rotate(180deg);
+			}
+		}
+
+		&_next {
+		}
+	}
 }
 
 
