--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,6 +92,17 @@ body {
 	&__services {
 	}
 }
+
+.page-news {
+	flex: 1 1 auto;
+	&__section {
+
+		&_name {
+		}
+	}
+	&__cards {
+	}
+}
 //===================================================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
@@ -129,12 +140,6 @@ body {
 		}
 		@media(min-width : $mobile){
 			max-width: prc(620, 1300);
-		}
-		@media(max-width : $mobile){
-			font-size: rem(36);
-		}
-		@media(max-width : $tablet){
-			font-size: rem(28);
 		}
 	}
 
@@ -694,3 +699,143 @@ body {
 }
 
 //</SERVICES-PAGE>====================================================================================================
+
+
+
+
+//<SECTION-NAME>====================================================================================================
+
+.section-name {
+	position: relative;
+	margin-bottom: rem(80);
+	@media(max-width : $mobileSmall){
+		margin-bottom: rem(50);
+	}
+	&__container {
+		padding: rem(136) 0 rem(60) 0;
+		position: relative;
+		z-index: 2;
+		@media(max-width : $mobile){
+			padding: rem(100) 0 rem(40) 0;
+		}
+		@media(max-width : $mobile){
+			padding: rem(80) 0 rem(20) 0;
+		}
+	}
+
+	&__title {
+		text-align: center;
+	}
+
+	&__background {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		img {
+			object-position: 0 0;
+		}
+	}
+}
+
+//</SECTION-NAME>====================================================================================================
+
+
+
+//<NEWS-CARDS>====================================================================================================
+
+.news-cards {
+	margin-bottom: rem(120);
+	@media(max-width : $mobileSmall){
+		margin-bottom: rem(80);
+	}
+	&__container {
+	}
+
+	&__body {
+		display: grid;
+		gap: rem(24);
+		grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
+		@media(max-width : $mobileSmall){
+			grid-template-columns: repeat(1, 1fr);
+		}
+	}
+
+	&__item {
+		border: 1px solid #F7ECE1;
+		max-width: rem(416);
+		margin: 0 auto;
+		&_container {
+			margin: prc(30, 416) prc(40, 416);
+			@media(max-width : $mobileSmall){
+				margin: rem(15);
+			}
+		}
+	}
+
+	&__image {
+		padding-bottom: prc(240, 336);
+		margin-bottom: rem(25);
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__date {
+		font-size: rem(14);
+		line-height: 140%;
+		color: #333333;
+		opacity: 0.5;
+		margin-bottom: math.div(15, 14) * 1em;
+	}
+
+	&__text {
+		margin-bottom: math.div(20, 21) * 1em;
+		@media(max-width : $tablet){
+			font-size: rem(28);
+		}
+		@media(max-width : $mobile){
+			font-size: rem(28);
+		}
+		@media(max-width : $mobileSmall){
+			font-size: rem(18);
+		}
+	}
+
+	&__button {
+		background-color: #8D86C9;
+		height: rem(45);
+		width: rem(137);
+		display: inline-block;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		transition: all 0.3s ease 0s;
+		@media(any-hover : hover){
+			&:hover {
+				background-color: #fff;
+				border: 1px solid #8D86C9;
+				span {
+					color: #8D86C9;
+				}
+			}
+		}
+		span {
+			font-size: rem(18);
+			line-height: 140%;
+			color: #FFFFFF;
+		}
+		@media(max-width : $mobileSmall){
+			height: rem(35);
+			width: rem(100);
+			& span {
+				font-size: rem(14);
+			}
+		}
+	}
+}
+
+//</NEWS-CARDS>====================================================================================================
