--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -30,6 +30,12 @@
 	font-size: rem(48);
 	line-height: 140%;
 	color: #FFFFFF;
+	@media(max-width : $mobile){
+		font-size: rem(36);
+	}
+	@media(max-width : $tablet){
+		font-size: rem(28);
+	}
 }
 
 ._title-h2 {
