--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -103,6 +103,11 @@ body {
 	&__cards {
 	}
 }
+.page-about {
+	flex: 1 1 auto;
+	&__slider {
+	}
+}
 //===================================================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
@@ -736,6 +741,11 @@ body {
 		img {
 			object-position: 0 0;
 		}
+		&_about {
+			img {
+				object-position: 0 bottom;
+			}
+		}
 	}
 }
 
@@ -766,8 +776,12 @@ body {
 		border: 1px solid #F7ECE1;
 		max-width: rem(416);
 		margin: 0 auto;
+		display: flex;
 		&_container {
 			margin: prc(30, 416) prc(40, 416);
+			display: flex;
+			flex-direction: column;
+			flex: 1 1 auto;
 			@media(max-width : $mobileSmall){
 				margin: rem(15);
 			}
@@ -782,6 +796,7 @@ body {
 	&__content {
 		display: flex;
 		flex-direction: column;
+		flex: 1 1 auto;
 	}
 
 	&__date {
@@ -794,6 +809,7 @@ body {
 
 	&__text {
 		margin-bottom: math.div(20, 21) * 1em;
+		flex: 1 1 auto;
 		@media(max-width : $tablet){
 			font-size: rem(28);
 		}
@@ -839,3 +855,97 @@ body {
 }
 
 //</NEWS-CARDS>====================================================================================================
+
+
+
+
+
+//<CORTS-GALLERY>====================================================================================================
+
+.gallery-slider {
+	margin-bottom: rem(150);
+	@media(max-width : $pc){
+		margin-bottom: rem(80);
+	}
+	@media(max-width : $mobile){
+		margin-bottom: rem(50);
+	}
+	&__wrapper {
+	}
+
+	&__item {
+		width: 100%;
+	}
+
+	&__picture {
+		border: 1px solid #F7ECE1;
+		&_wrapper {
+			margin: prc(25, 1300) prc(20, 1300);
+			height: prc(450, 1256);
+			position: relative;
+			@media(max-width : $mobileSmall){
+				margin: rem(10);
+				height: rem(120);
+			}
+		}
+	}
+
+	&__image {
+		padding-bottom: prc(450, 1256);
+		@media(max-width : $mobileSmall){
+			padding-bottom: rem(120);
+		}
+	}
+
+	&__label {
+		position: absolute;
+		bottom: rem(40);
+		left: rem(50);
+		background-color: #8D86C9;
+		height: rem(45);
+		width: rem(145);
+		display: inline-block;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		transition: all 0.3s ease 0s;
+		font-size: rem(18);
+		line-height: 140%;
+		color: #FFFFFF;
+		@media(any-hover : hover){
+			&:hover {
+				background-color: #fff;
+				border: 1px solid #8D86C9;
+				span {
+					color: #8D86C9;
+				}
+			}
+		}
+		span {
+			font-size: rem(18);
+			line-height: 140%;
+			color: #FFFFFF;
+		}
+		@media(max-width : $pc){
+			bottom: rem(20);
+			left: rem(25);
+		}
+		@media(max-width : $mobile){
+			height: rem(35);
+			width: rem(90);
+			font-size: rem(12);
+			& span {
+				font-size: rem(14);
+			}
+		}
+		@media(max-width : $mobileSmall){
+			bottom: rem(10);
+			left: rem(10);
+			height: rem(25);
+			width: rem(80);
+			font-size: rem(12);
+		}
+	}
+}
+
+//</CORTS-GALLERY>====================================================================================================
