--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -107,6 +107,8 @@ body {
 	flex: 1 1 auto;
 	&__slider {
 	}
+	&__club{
+	}
 }
 //===================================================================================================================================
 
@@ -949,3 +951,120 @@ body {
 }
 
 //</CORTS-GALLERY>====================================================================================================
+
+
+
+
+//<CLUB-HISTORY>====================================================================================================
+
+.club-section {
+	margin-bottom: rem(120);
+	@media(max-width : $mobile){
+		margin-bottom: rem(70);
+	}
+	&__container {
+	}
+
+	&__title {
+		margin-bottom: rem(60);
+		@media(max-width : $mobile){
+			margin-bottom: rem(30);
+			font-size: rem(28);
+		}
+	}
+
+	&__wrapper {
+		position: relative;
+	}
+
+	&__history {
+	}
+	&__picture {
+		display: block;
+		@media(min-width : em(1125)){
+			position: absolute;
+			left: 0;
+			top: 50%;
+			width: prc(526, 1300);
+			transform: translate(0, -50%);
+		}
+	}
+
+	&__image {
+		width: 100%;
+		padding-bottom: prc(514, 526);
+		@media(max-width : em(1125)){
+			max-width: rem(526);
+			padding-bottom: prc(514, 1094);
+			margin: 0 auto;
+		}
+	}
+}
+
+.club-history {
+	&__features {
+		display: grid;
+		grid-template-columns: 26.3% 1fr 26.3%;
+		@media(min-width : $mobile){
+			column-gap: prc(34, 650);
+		}
+		@media(max-width : $mobile){
+			display: flex;
+			flex-wrap: wrap;
+			row-gap: rem(20);
+		}
+		@media(max-width : $mobileSmall){
+			row-gap: rem(30);
+		}
+	}
+
+	&__feature {
+		display: flex;
+		align-items: center;
+		column-gap: rem(16);
+		@media(max-width : em(1190)){
+			column-gap: rem(8);
+		}
+		@media(max-width : $mobile){
+			@media(min-width : em(520)){
+				flex: 0 0 50%;
+			}
+		}
+	}
+
+	&__number {
+	}
+
+	&__name {
+		font-size: rem(14);
+		line-height: 140%;
+		font-weight: 600;
+		color: #333;
+		@media(max-width : $pc){
+			font-size: rem(12);
+		}
+	}
+}
+
+.club-section .club-history {
+	@media(min-width : em(1125)){
+		max-width: prc(856, 1300);
+	}
+	@media(max-width : em(1125)){
+		margin: 0 auto rem(30) auto;
+		@media(max-width : em(1125)){
+			max-width: rem(526);
+		}
+	}
+	&__container {
+		max-width: prc(650, 856);
+		margin: 0 prc(60, 856) 0 auto;
+		@media(max-width : em(1125)){
+			max-width: 100%;
+			margin: 0 rem(30);
+		}
+	}
+}
+
+
+//</CLUB-HISTORY>====================================================================================================
